--- a/404.html
+++ b/404.html
@@ -12,12 +12,13 @@
 <!-- Header -->
 <header>
   <div class="logo">
-    <img src="images/logo.png" alt="Better Dumpsters Today Logo">
+    <img src="images/logo.svg" alt="Better Dumpsters Today Logo">
   </div>
+  <button class="menu-toggle">☰</button>
   <nav>
-    <a href="index.html">Home</a>
-    <a href="services.html">Services & Pricing</a>
-    <a href="contact.html">Contact & Scheduling</a>
+    <a href="index.html" class="nav-link">Home</a>
+    <a href="services.html" class="nav-link">Services & Pricing</a>
+    <a href="contact.html" class="nav-link">Contact & Scheduling</a>
   </nav>
 </header>
 
@@ -30,7 +31,8 @@
 
 <!-- Footer -->
 <footer>
-  <p>Better Dumpsters Today &copy; 2024. All Rights Reserved.</p>
+  <p>Better Dumpsters Today © 2024. All Rights Reserved.</p>
+  <p>Contact us: <a href="tel:240-960-6005">240-960-6005</a></p>
   <p>Follow us on <a href="#">Facebook</a>, <a href="#">Instagram</a></p>
 </footer>
 </body>
