--- a/contact.html
+++ b/contact.html
@@ -12,19 +12,20 @@
 <!-- Header -->
 <header>
     <div class="logo">
-        <img src="images/logo.png" alt="Better Dumpsters Today Logo">
+        <img src="images/logo.svg" alt="Better Dumpsters Today Logo">
     </div>
+    <button class="menu-toggle">☰</button>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="services.html">Services & Pricing</a>
-        <a href="contact.html">Contact & Scheduling</a>
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="services.html" class="nav-link">Services & Pricing</a>
+        <a href="contact.html" class="nav-link">Contact & Scheduling</a>
     </nav>
 </header>
 
 <!-- Contact and Scheduling Section -->
 <section id="contact">
     <h2>Contact & Scheduling</h2>
-    <form action="/submit_form" method="POST">
+    <form id="contact-form">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br><br>
         <label for="phone">Phone:</label>
@@ -45,9 +46,11 @@
 
 <!-- Footer -->
 <footer>
-    <p>Better Dumpsters Today &copy; 2024. All Rights Reserved.</p>
+    <p>Better Dumpsters Today © 2024. All Rights Reserved.</p>
+    <p>Contact us: <a href="tel:240-960-6005">240-960-6005</a></p>
     <p>Follow us on <a href="#">Facebook</a>, <a href="#">Instagram</a></p>
 </footer>
+<script src="js/app.js"></script>
 </body>
 
 </html>
