--- a/services.html
+++ b/services.html
@@ -12,37 +12,56 @@
 <!-- Header -->
 <header>
     <div class="logo">
-        <img src="images/logo.png" alt="Better Dumpsters Today Logo">
+        <img src="images/dumpster-logo.png" alt="Better Dumpsters Today Logo">
     </div>
+    <button class="menu-toggle">☰</button>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="services.html">Services & Pricing</a>
-        <a href="contact.html">Contact & Scheduling</a>
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="services.html" class="nav-link">Services & Pricing</a>
+        <a href="contact.html" class="nav-link">Contact & Scheduling</a>
     </nav>
 </header>
 
 <!-- Services Section -->
 <section id="services">
     <h2>Our Services & Pricing</h2>
-    <div class="service">
+    <div id="dumpster-services" class="service">
         <h3>Dumpster Services</h3>
-        <p>We provide dumpsters of various sizes for different types of waste, whether it be for residential or commercial projects. <strong>Price: Starting at $200 per week.</strong></p>
+        <p>We provide dumpsters of various sizes for different types of waste, whether it be for residential or commercial projects.</p>
+        <ul>
+            <li>40-Yard Dumpster: $900 (5 Tons included)</li>
+            <li>30-Yard Dumpster: $750 (4 Tons included)</li>
+            <li>25-Yard Dumpster: $700 (3 Tons included)</li>
+            <li>20-Yard Dumpster: $650 (2.5 Tons included)</li>
+            <!-- Add more details here -->
+        </ul>
     </div>
-    <div class="service">
+    <div id="excavation-services" class="service">
         <h3>Excavation & Land Clearing</h3>
-        <p>Our experienced team offers excavation and land clearing services, perfect for any construction project. <strong>Price: Contact for a quote.</strong></p>
+        <p>Our experienced team offers excavation and land clearing services, perfect for any construction project.</p>
+        <ul>
+            <li>Bobcat: $2500/week, $450/day ($900/day with operator)</li>
+            <li>Mini Excavator: $2500/week, $450/day ($900/day with operator)</li>
+            <!-- Add more details here -->
+        </ul>
     </div>
-    <div class="service">
+    <div id="hauling-services" class="service">
         <h3>Dump Trucking & Hauling</h3>
-        <p>We offer dump trucking and hauling services for construction waste, residential cleanups, and more. <strong>Price: Contact for details.</strong></p>
+        <p>We offer dump trucking and hauling services for construction waste, residential cleanups, and more.</p>
+        <ul>
+            <li>$90/hr, Plus 1 Hr Travel, 4hr minimum</li>
+            <!-- Add more details here -->
+        </ul>
     </div>
 </section>
 
 <!-- Footer -->
 <footer>
-    <p>Better Dumpsters Today &copy; 2024. All Rights Reserved.</p>
+    <p>Better Dumpsters Today © 2024. All Rights Reserved.</p>
+    <p>Contact us: <a href="tel:240-960-6005">240-960-6005</a></p>
     <p>Follow us on <a href="#">Facebook</a>, <a href="#">Instagram</a></p>
 </footer>
+<script src="js/app.js"></script>
 </body>
 
 </html>
