--- a/contact.html
+++ b/contact.html
@@ -5,51 +5,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact & Scheduling - Better Dumpsters Today</title>
+    <meta name="description" content="Get in touch or schedule your dumpster, excavation, or hauling service with Better Dumpsters Today. We're here to help!">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/yourkitcode.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-<!-- Header -->
+<!-- Header with Enhanced Navigation -->
 <header>
     <div class="logo">
-        <img src="images/logo.svg" alt="Better Dumpsters Today Logo">
+        <img src="img/dumpster-logo.jpg" alt="Better Dumpsters Today Logo for waste management services">
     </div>
     <button class="menu-toggle">☰</button>
     <nav>
-        <a href="index.html" class="nav-link">Home</a>
+        <a href="index.html" class="nav-link"><i class="fas fa-home"></i> Home</a>
         <a href="services.html" class="nav-link">Services & Pricing</a>
         <a href="contact.html" class="nav-link">Contact & Scheduling</a>
     </nav>
 </header>
 
 <!-- Contact and Scheduling Section -->
-<section id="contact">
+<section id="contact" class="contact-section">
     <h2>Contact & Scheduling</h2>
-    <form id="contact-form">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required><br><br>
-        <label for="phone">Phone:</label>
-        <input type="tel" id="phone" name="phone" required><br><br>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
-        <label for="service">Service Type:</label>
-        <select id="service" name="service">
-            <option value="dumpster">Dumpster Services</option>
-            <option value="excavation">Excavation & Land Clearing</option>
-            <option value="hauling">Dump Trucking & Hauling</option>
-        </select><br><br>
-        <label for="date">Preferred Date:</label>
-        <input type="date" id="date" name="date"><br><br>
-        <button type="submit" class="submit-button">Schedule Now</button>
-    </form>
+    <div class="contact-container">
+        <div class="contact-form">
+            <form id="contact-form" action="#" method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required aria-required="true"><br><br>
+                <label for="phone">Phone:</label>
+                <input type="tel" id="phone" name="phone" required aria-required="true"><br><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required aria-required="true"><br><br>
+                <label for="service">Service Type:</label>
+                <select id="service" name="service" required aria-required="true">
+                    <option value="dumpster">Dumpster Services</option>
+                    <option value="excavation">Excavation & Land Clearing</option>
+                    <option value="hauling">Dump Trucking & Hauling</option>
+                </select><br><br>
+                <label for="date">Preferred Date:</label>
+                <input type="date" id="date" name="date" aria-label="Preferred service date"><br><br>
+                <label for="message">Additional Information:</label>
+                <textarea id="message" name="message" rows="4" cols="50" placeholder="Any additional details or comments..."></textarea><br><br>
+                <button type="submit" class="submit-button">Schedule Now</button>
+            </form>
+        </div>
+        <div class="contact-info">
+            <h3>Get in Touch</h3>
+            <p><i class="fas fa-phone"></i> <a href="tel:240-960-6005">240-960-6005</a></p>
+            <p><i class="fas fa-envelope"></i> <a href="mailto:info@betterdumpsters.com">info@betterdumpsters.com</a></p>
+            <p><i class="fas fa-map-marker-alt"></i> 1234 Service Lane, Glen Dale, MD</p>
+            <div class="social-links">
+                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Map Section -->
+<section id="map">
+    <h3>Find Us Here</h3>
+    <div id="map-container">
+        <!-- Embed your Google Map here -->
+    </div>
 </section>
 
 <!-- Footer -->
 <footer>
-    <p>Better Dumpsters Today © 2024. All Rights Reserved.</p>
-    <p>Contact us: <a href="tel:240-960-6005">240-960-6005</a></p>
-    <p>Follow us on <a href="#">Facebook</a>, <a href="#">Instagram</a></p>
+    <div class="footer-content">
+        <p>Better Dumpsters Today © 2024. All Rights Reserved.</p>
+        <p>Contact us: <a href="tel:240-960-6005">240-960-6005</a></p>
+        <p>Follow us on <a href="#">Facebook</a>, <a href="#">Instagram</a></p>
+        <div class="quick-links">
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </div>
+    </div>
 </footer>
+
+<!-- Scripts -->
 <script src="js/app.js"></script>
 </body>
 
