--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Contact & Scheduling - Better Dumpsters Today</title>
     <meta name="description" content="Get in touch or schedule your dumpster, excavation, or hauling service with Better Dumpsters Today. We're here to help!">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/yourkitcode.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/yourkitcode.js" crossorigin="anonymous" defer></script>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <div class="logo">
         <img src="img/dumpster-logo.jpg" alt="Better Dumpsters Today Logo for waste management services">
     </div>
-    <button class="menu-toggle">☰</button>
+    <button class="menu-toggle" aria-label="Toggle menu">☰</button>
     <nav>
         <a href="index.html" class="nav-link"><i class="fas fa-home"></i> Home</a>
         <a href="services.html" class="nav-link">Services & Pricing</a>
@@ -29,7 +29,7 @@
     <h2>Contact & Scheduling</h2>
     <div class="contact-container">
         <div class="contact-form">
-            <form id="contact-form" action="#" method="post">
+            <form id="contact-form" action="submit_form.php" method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required aria-required="true"><br><br>
                 <label for="phone">Phone:</label>
@@ -70,24 +70,31 @@
     </div>
 </section>
 
-<!-- Footer -->
+<!-- Enhanced Footer -->
 <footer>
     <div class="footer-content">
-        <p>Better Dumpsters Today © 2024. All Rights Reserved.</p>
-        <p>Contact us: <a href="tel:240-960-6005">240-960-6005</a></p>
-        <p>Follow us on <a href="#">Facebook</a>, <a href="#">Instagram</a></p>
-        <div class="quick-links">
+        <div class="footer-section">
+            <h3>Contact Us</h3>
+            <p><a href="tel:240-960-6005">240-960-6005</a></p>
+            <p><a href="mailto:info@betterdumpsters.com">info@betterdumpsters.com</a></p>
+        </div>
+        <div class="footer-section">
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
         </div>
+        <div class="footer-section">
+            <h3>Follow Us</h3>
+            <p><a href="#" aria-label="Facebook">Facebook</a>, <a href="#" aria-label="Instagram">Instagram</a></p>
+        </div>
     </div>
+    <p class="copyright">Better Dumpsters Today © 2024. All Rights Reserved.</p>
 </footer>
 
 <!-- Scripts -->
-<script src="js/app.js"></script>
+<script src="js/app.js" defer></script>
 </body>
 
 </html>
