--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
 
 <!-- Contact and Scheduling Section -->
 <section id="contact" class="contact-section">
-    <h2>Contact & Scheduling</h2>
-    <div class="contact-container">
+    <h2 class="center-text">Contact & Scheduling</h2>
+    <div class="contact-container center-text">
         <div class="contact-form">
             <form id="contact-form" action="submit_form.php" method="post">
                 <label for="name">Name:</label>
@@ -65,8 +65,8 @@
 <!-- Map Section -->
 <section id="map">
     <h3>Find Us Here</h3>
-    <div id="map-container">
-        <!-- Embed your Google Map here -->
+    <div id="map-container" style="width: 100%;">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019284507073!2d-122.419415484681!3d37.77492927975971!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809c5b5b5b5b%3A0x5b5b5b5b5b5b5b5b!2s1234%20Service%20Lane%2C%20Glen%20Dale%2C%20MD!5e0!3m2!1sen!2sus!4v1600000000000!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 </section>
 
